// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation 1`] = `
Object {
  "message": undefined,
  "valid": true,
  "validation": Object {
    "array": Object {
      "nullable": true,
      "required": true,
      "valid": true,
      "value": Array [
        "foo",
      ],
    },
    "arrayReq": Object {
      "nullable": false,
      "required": true,
      "valid": true,
      "value": Array [
        1,
        2,
        3,
      ],
    },
    "b": Object {
      "valid": true,
      "value": true,
    },
    "child": Object {
      "valid": true,
      "value": Object {
        "date": "2020-01-01T00:00:00.000Z",
        "name": "Bob",
      },
    },
    "child2": Object {
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "emptyStrArr": Object {
      "nullable": true,
      "required": false,
      "valid": true,
      "value": Array [],
    },
    "nullable": Object {
      "nullable": true,
      "required": true,
      "valid": true,
      "value": null,
    },
    "str": Object {
      "valid": true,
      "value": "foo",
    },
    "v": Object {
      "valid": true,
      "value": 1,
    },
  },
}
`;

exports[`Validation 2`] = `
Object {
  "message": undefined,
  "valid": false,
  "validation": Object {
    "array": Object {
      "nullable": true,
      "required": true,
      "valid": true,
      "value": Array [],
    },
    "arrayReq": Object {
      "nullable": false,
      "required": true,
      "valid": false,
      "value": Array [],
    },
    "b": Object {
      "valid": true,
      "value": true,
    },
    "child": Object {
      "message": undefined,
      "nullable": false,
      "required": true,
      "valid": false,
      "validation": Object {
        "message": undefined,
        "valid": false,
        "validation": Object {
          "date": Object {
            "valid": true,
            "value": "2020-01-01T00:00:00.000Z",
          },
          "name": Object {
            "error": [Error: Assertion fails],
            "message": undefined,
            "nullable": false,
            "required": true,
            "valid": false,
            "value": 123,
          },
        },
      },
      "value": Object {
        "date": "2020-01-01T00:00:00.000Z",
        "name": 123,
      },
    },
    "child2": Object {
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "emptyStrArr": Object {
      "nullable": true,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "nullable": Object {
      "valid": true,
      "value": true,
    },
    "str": Object {
      "nullable": false,
      "required": false,
      "valid": true,
      "value": undefined,
    },
    "v": Object {
      "error": [Error: Assertion fails],
      "message": "The value of \\"v\\" shouldn't be null",
      "nullable": false,
      "required": true,
      "valid": false,
      "value": null,
    },
  },
}
`;

exports[`Validation 3`] = `
Object {
  "error": "Validation failed",
  "validation": Array [
    Object {
      "field": "v",
      "input": null,
      "message": "The value of \\"v\\" shouldn't be null",
    },
    Object {
      "field": "arrayReq",
      "input": Array [],
      "message": undefined,
    },
    Object {
      "field": "child",
      "validation": Array [
        Object {
          "field": "name",
          "input": 123,
          "message": "Assertion fails",
        },
      ],
    },
  ],
}
`;
